[gd_scene load_steps=2 format=3 uid="uid://b12ms6vuv3ss0"]

[ext_resource type="Script" uid="uid://c1ja3wqwg4vl3" path="res://Scripts/UI/passengerInformation.gd" id="1_iq863"]

[node name="PassengerInformation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iq863")

[node name="Panel" type="ColorRect" parent="."]
offset_right = 300.0
offset_bottom = 150.0
color = Color(0.00784314, 0.286275, 0.309804, 1)

[node name="Passenger_Type" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -55.0
offset_right = 115.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Passenger_Type"
horizontal_alignment = 1

[node name="Passenger_Trait" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = -22.0
offset_right = 114.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Passenger_Trait"
horizontal_alignment = 1

[node name="Passenger_Gender" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = 11.0
offset_right = 134.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Passenger_Gender"
horizontal_alignment = 1
